prometheus/prometheus-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-lb
  labels:
    app: prometheus-lb
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 9090
  selector:
    app: prometheus
