prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  rules:
  - host: prometheus.k8s-demo.qiniu.io
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
